--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html{
 body{
     font-family: "Inika", serif;
     height: 100%;
-    background-color: blueviolet;
+    background-color: #fefefe;
     margin: 0;
 
 }
@@ -160,7 +160,7 @@ label{
 
 .logo{
 margin-left: 60%;
-margin-top: -35%; 
+margin-top: -30%; 
 }
 
 .logo img{
@@ -183,7 +183,25 @@ border-radius: 50%;
 .logo2 img{
     width: 500px;
     height: 500px;
+}
+.logo2{
     margin-left: 50%;
-    margin-top: -20%;
-
+    margin-top: -30%;
+}
+.logo3{
+    margin-left: 50%;
+    margin-top: -15%;
+}
+.logo3 img{
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+}
+#listar{
+    border-style: solid;
+    border-radius: 10px;
+    border-color: #000;
+    text-align: center;
+    width: 20%;
+    margin-left: 40%;
 }
